--- a/notebooks/01_data_load.ipynb
+++ b/notebooks/01_data_load.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 121,
    "id": "c12c49ff-b9f8-44d1-aa37-fe5661c06d0e",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 122,
    "id": "34660e13-0121-46cd-8179-34f31a8ccb63",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 123,
    "id": "6aff64f1-2f00-4a00-b609-6b813ba6e665",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 124,
    "id": "436d98a0-5358-4cc5-95a3-b559033fc568",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 125,
    "id": "02050a22-3f99-4fef-bde8-5843e8b93735",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 126,
    "id": "41faf137-1326-46dd-a3be-e2c8ec7156ae",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 127,
    "id": "e4c0a397-b426-42e1-9749-2fbee45403ee",
    "metadata": {},
    "outputs": [
@@ -256,6 +256,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "64d119a2-6c8a-4517-b059-b4cbbbc12e2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Manifest & Profiling geschrieben.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Manifest & Profiling ---\n",
+    "import hashlib, json\n",
+    "\n",
+    "def _sha256_file(path, chunk=1<<20):\n",
+    "    h = hashlib.sha256()\n",
+    "    with open(path, \"rb\") as f:\n",
+    "        while True:\n",
+    "            b = f.read(chunk)\n",
+    "            if not b: break\n",
+    "            h.update(b)\n",
+    "    return h.hexdigest()\n",
+    "\n",
+    "manifest = {\n",
+    "    \"ticker\": TICKER, \"interval\": INTERVAL, \"start\": START, \"end\": END,\n",
+    "    \"rows\": int(len(df)), \"first_ts\": str(df.index.min()), \"last_ts\": str(df.index.max()),\n",
+    "    \"sha256\": _sha256_file(csv_path),\n",
+    "    \"created_utc\": time.strftime(\"%Y-%m-%dT%H:%M:%SZ\", time.gmtime())\n",
+    "}\n",
+    "with open(\"../data/DATA_MANIFEST.json\", \"w\") as f:\n",
+    "    json.dump(manifest, f, indent=2)\n",
+    "\n",
+    "profiling = {\n",
+    "    \"n\": int(len(df)),\n",
+    "    \"na_any\": int(df.isna().any().any()),\n",
+    "    \"close_min\": float(df[\"close\"].min()),\n",
+    "    \"close_max\": float(df[\"close\"].max()),\n",
+    "    \"logret_1d_mean\": float(np.log(df[\"close\"]).diff().dropna().mean()),\n",
+    "    \"logret_1d_std\": float(np.log(df[\"close\"]).diff().dropna().std()),\n",
+    "}\n",
+    "with open(\"../data/profiling.json\", \"w\") as f:\n",
+    "    json.dump(profiling, f, indent=2)\n",
+    "\n",
+    "print(\"Manifest & Profiling geschrieben.\")\n"
+   ]
+  },
+  {
    "cell_type": "raw",
    "id": "699070aa-3ebf-4887-b4c5-dc7463f5b216",
    "metadata": {},
@@ -273,66 +323,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 129,
    "id": "a9b57228-5339-4cdd-8651-f02311920020",
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_path = f\"../data/{TICKER}_{INTERVAL}_{START}_{END}.csv\"\n",
-    "df = read_prices(csv_path)"
+    "import numpy as np, yaml, json\n",
+    "import pandas as pd\n",
+    "from finance_lstm import read_prices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 130,
+   "id": "33ecb753-23a2-4b1d-8de7-c41129406158",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 0) RAW laden (einmal!)\n",
+    "raw_csv_path = f\"../data/{TICKER}_{INTERVAL}_{START}_{END}.csv\"\n",
+    "df_raw = read_prices(raw_csv_path)  # OHLCV (+adjclose), sauber & DatetimeIndex\n",
+    "assert (df_raw[\"close\"] > 0).all(), \"Close muss überall > 0 sein (für log).\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
    "id": "e86b7e3e-62e3-48d5-bcd8-b6680adfeb6b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train-CSV geschrieben: ../data/AAPL_1d_2012-01-01_2025-09-01_cls_h1.csv\n",
+      "targets_summary: {'horizon': 1, 'n': 3416, 'class_counts': {0: 1614, 1: 1802}, 'pos_rate': 0.5275175644028103}\n"
+     ]
+    }
+   ],
    "source": [
-    "exp = {\"open\",\"high\",\"low\",\"close\",\"volume\"}\n",
-    "assert exp.issubset(df.columns), f\"Columns fehlen: {sorted(exp - set(df.columns))}\"\n",
-    "assert not df.index.has_duplicates, \"Duplicate timestamps\"\n",
-    "assert (df[\"close\"] > 0).all(), \"Close muss positiv sein\"\n",
-    "assert df.notna().all().all(), \"NaNs im Frame\"\n"
+    "# 1) Features bauen (nur Vergangenheitsfunktionen)\n",
+    "def build_features(frame: pd.DataFrame) -> pd.DataFrame:\n",
+    "    out = frame.copy()\n",
+    "    out[\"logret_1d\"] = np.log(out[\"close\"]).diff()\n",
+    "    out[\"vola_10d\"]  = out[\"logret_1d\"].rolling(10, min_periods=10).std()\n",
+    "    out[\"sma_10\"]    = out[\"close\"].rolling(10, min_periods=10).mean()\n",
+    "    out[\"sma_20\"]    = out[\"close\"].rolling(20, min_periods=20).mean()\n",
+    "    out[\"sma_diff\"]  = out[\"sma_10\"] / out[\"sma_20\"] - 1.0\n",
+    "    return out\n",
+    "\n",
+    "df_feat = build_features(df_raw)\n",
+    "\n",
+    "# 2) Target für den KONFIGURIERTEN HORIZON\n",
+    "future_log = np.log(df_feat[\"close\"]).shift(-HORIZON)\n",
+    "curr_log   = np.log(df_feat[\"close\"])\n",
+    "df_feat[\"target\"] = ((future_log - curr_log) > 0).astype(\"int8\")\n",
+    "\n",
+    "# 3) Aufräumen: NaNs raus + (optional) Index sortieren\n",
+    "df_clean = df_feat.dropna().copy().sort_index()  # optional: .sort_index()\n",
+    "\n",
+    "# 4) Artefakte: Feature-Metadaten + Trainings-CSV\n",
+    "feature_meta = {\n",
+    "    \"name\": \"features_v1\",\n",
+    "    \"features\": [\"logret_1d\",\"vola_10d\",\"sma_10\",\"sma_20\",\"sma_diff\"],\n",
+    "    \"leakage_note\": \"Nur rückwärtsgerichtete Rolling/Diff – kein Future-Leakage.\"\n",
+    "}\n",
+    "with open(\"../data/features_v1.yml\", \"w\") as f:\n",
+    "    yaml.safe_dump(feature_meta, f)\n",
+    "\n",
+    "train_csv_out = f\"../data/{TICKER}_{INTERVAL}_{START}_{END}_cls_h{HORIZON}.csv\"\n",
+    "df_clean.to_csv(train_csv_out, float_format=\"%.8f\")  # optional: float_format\n",
+    "\n",
+    "# Zielverteilung\n",
+    "vc = df_clean[\"target\"].value_counts().sort_index()\n",
+    "targets_summary = {\n",
+    "    \"horizon\": HORIZON,\n",
+    "    \"n\": int(len(df_clean)),\n",
+    "    \"class_counts\": {int(k): int(v) for k, v in vc.items()},\n",
+    "    \"pos_rate\": float(vc.get(1, 0) / vc.sum()) if vc.sum() else None,\n",
+    "}\n",
+    "with open(\"../data/targets_summary.json\", \"w\") as f:\n",
+    "    json.dump(targets_summary, f, indent=2)\n",
+    "\n",
+    "print(\"Train-CSV geschrieben:\", train_csv_out)\n",
+    "print(\"targets_summary:\", targets_summary)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "23a764bf-3517-452c-a887-f5704dac8d79",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ---- 2) Hilfsfeature: 1-Tages-Logreturn (optional) ----\n",
-    "na_counts = df.isna().sum()\n",
-    "assert na_counts.sum() == 0, f\"Remaining NaNs detected: {na_counts[na_counts > 0]}\"\n",
-    "\n",
-    "if (df[\"close\"] <= 0).any():\n",
-    "    raise ValueError(\"Close prices must be positive for log-return computation\")\n",
-    "\n",
-    "df[\"logret_1d\"] = np.log(df[\"close\"]).diff()\n",
-    "\n",
-    "# ---- 3) Zielvariable: Up/Down in HORIZON Schritten ----\n",
-    "future_log = np.log(df[\"close\"]).shift(-HORIZON)\n",
-    "curr_log   = np.log(df[\"close\"])\n",
-    "y_return   = future_log - curr_log\n",
-    "df[\"target\"] = (y_return > 0).astype(int)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "074b0528-d853-4401-a903-7d339d44ec10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Aufräumen (erste diff-Zeile & letzte HORIZON-Zeilen)\n",
-    "df_clean = df.dropna().copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 132,
    "id": "cabbdc51-5669-4d3f-93c3-ce6345412e6d",
    "metadata": {},
    "outputs": [
@@ -340,36 +419,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Spalten: ['open', 'high', 'low', 'close', 'volume', 'logret_1d', 'target']\n",
-      "Zeitraum: 2012-01-04 → 2025-08-29 | n = 3434\n",
+      "Spalten: ['open', 'high', 'low', 'close', 'volume', 'logret_1d', 'vola_10d', 'sma_10', 'sma_20', 'sma_diff', 'target']\n",
+      "Zeitraum: 2012-01-31 → 2025-08-29 | n = 3416\n",
       "\n",
       "Vorschau:\n",
       "                 close  logret_1d  target\n",
       "Date                                    \n",
-      "2012-01-04  12.411517   0.005360       1\n",
-      "2012-01-05  12.549306   0.011041       1\n",
-      "2012-01-06  12.680500   0.010400       0\n",
-      "2012-01-09  12.660385  -0.001588       1\n",
-      "2012-01-10  12.705715   0.003574       0\n",
+      "2012-01-31  13.703584   0.007631       0\n",
+      "2012-02-01  13.694874  -0.000636       0\n",
+      "2012-02-02  13.662754  -0.002348       1\n",
+      "2012-02-03  13.799651   0.009970       1\n",
+      "2012-02-06  13.928436   0.009289       1\n",
       "\n",
-      "Klassenverteilung 0/1: {0: 1622, 1: 1812} | Anteil 1: 0.528\n"
+      "Klassenverteilung 0/1: {0: 1614, 1: 1802} | Anteil 1: 0.528\n"
      ]
     }
    ],
    "source": [
-    "# ---- 4) Checks ----\n",
+    "# --- Checks & Vorschau ---\n",
     "print(\"Spalten:\", df_clean.columns.tolist())\n",
     "print(\"Zeitraum:\", df_clean.index.min().date(), \"→\", df_clean.index.max().date(), \"| n =\", len(df_clean))\n",
-    "\n",
     "print(\"\\nVorschau:\\n\", df_clean[[\"close\",\"logret_1d\",\"target\"]].head())\n",
-    "\n",
-    "vc = df_clean[\"target\"].value_counts().sort_index()\n",
     "print(\"\\nKlassenverteilung 0/1:\", vc.to_dict(), \"| Anteil 1:\", round(vc.get(1,0)/vc.sum(), 3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 133,
    "id": "0a4180ed-4cbc-4b79-9ef7-58ffcb2c5408",
    "metadata": {},
    "outputs": [
@@ -378,41 +454,27 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Horizon-Check: 2012-05-29 -> 2012-05-30\n",
-      "close_i = 17.179609298706055  | close_j = 17.386756896972656\n",
-      "target_i = 1\n"
+      "Horizon-Check: 2012-06-22 -> 2012-06-25\n",
+      "close_i = 17.474706649780273  | close_j = 17.134580612182617\n",
+      "target_i = 0\n"
      ]
     }
    ],
    "source": [
-    "# Mini-Horizon-Demo\n",
-    "i = df_clean.index[100]\n",
-    "j = df_clean.index[df_clean.index.get_loc(i) + HORIZON]\n",
+    "# --- Mini-Horizon-Demo (konsistent aus df_clean) ---\n",
+    "k = 100\n",
+    "if len(df_clean) <= max(k, HORIZON):\n",
+    "    raise ValueError(\"Zu wenige Zeilen für Mini-Demo. Wähle kleineren k oder prüfe HORIZON.\")\n",
+    "\n",
+    "i = df_clean.index[k]\n",
+    "pos_j = df_clean.index.get_loc(i) + HORIZON\n",
+    "if pos_j >= len(df_clean):\n",
+    "    raise IndexError(\"Index j liegt außerhalb des df_clean nach HORIZON-Shift.\")\n",
+    "j = df_clean.index[pos_j]\n",
+    "\n",
     "print(f\"\\nHorizon-Check: {i.date()} -> {j.date()}\")\n",
-    "print(\"close_i =\", df.loc[i, \"close\"], \" | close_j =\", df.loc[j, \"close\"])\n",
+    "print(\"close_i =\", float(df_clean.loc[i, \"close\"]), \" | close_j =\", float(df_clean.loc[j, \"close\"]))\n",
     "print(\"target_i =\", int(df_clean.loc[i, \"target\"]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "44f491a2-e01e-42ab-b9b2-a76e93eaf1c0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Aufbereitete Datei gespeichert unter: ../data/AAPL_1d_2012-01-01_2025-09-01_cls_h1.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "# ---- 5) Speichern für Block 3 ----\n",
-    "csv_out = f\"../data/{TICKER}_{INTERVAL}_{START}_{END}_cls_h{HORIZON}.csv\"\n",
-    "df_clean.to_csv(csv_out)\n",
-    "print(\"\\nAufbereitete Datei gespeichert unter:\", csv_out)"
    ]
   },
   {
@@ -424,14 +486,6 @@
     "# Wir haben target ausschließlich aus 'close' gebaut und für die Zukunft per .shift(-HORIZON)\n",
     "# versetzt. Features, die wir später bauen, dürfen ebenfalls nur Informationen bis t enthalten."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc68e732-d642-4310-92e5-f551ae16c3d8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
