improving a few parameters

--- a/notebooks/03_eval_backtest.ipynb
+++ b/notebooks/03_eval_backtest.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 90,
    "id": "4c69ddd0-9c11-473b-a3c9-56496d3485ab",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 91,
    "id": "c0c90c28-8087-4221-9a3e-466d5312eb62",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUN_DIR: ..\\results\\2025-10-03_00-36-36_lstm\n"
+      "RUN_DIR: ..\\results\\2025-10-03_13-48-57_lstm\n"
      ]
     }
    ],
@@ -84,13 +84,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 92,
    "id": "70085932-0e7c-4267-a84a-55b823b98d9b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- Artefakte laden ---\n",
-    "MODEL_PATH  = RUN_DIR / \"model.keras\"\n",
+    "MODEL_PATH  = (RUN_DIR / \"best.keras\") if (RUN_DIR / \"best.keras\").exists() else (RUN_DIR / \"model.keras\")\n",
     "SCALER_PATH = RUN_DIR / \"scaler.joblib\"\n",
     "CFG_PATH    = RUN_DIR / \"config.json\"\n",
     "assert MODEL_PATH.exists() and SCALER_PATH.exists() and CFG_PATH.exists(), \"Fehlende Artefakte.\"\n",
@@ -98,10 +98,8 @@
     "with open(CFG_PATH, \"r\") as f:\n",
     "    RCFG = json.load(f)\n",
     "\n",
-    "assert int(RCFG[\"horizon\"]) == HORIZON and int(RCFG[\"lookback\"]) == LOOKBACK, \"Config-Mismatch.\"\n",
-    "FEATURES = RCFG.get(\"features\", None)  # optional\n",
-    "\n",
-    "model  = keras.models.load_model(MODEL_PATH)\n",
+    "# Wichtig: compile=False\n",
+    "model  = keras.models.load_model(MODEL_PATH, compile=False)\n",
     "scaler = joblib.load(SCALER_PATH)\n",
     "\n",
     "# --- Daten laden (aus Block 2 erzeugte CSV) ---\n",
@@ -111,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 93,
    "id": "0753df2d-817e-405e-ab22-a66be6d3f1b3",
    "metadata": {},
    "outputs": [],
@@ -131,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 94,
    "id": "24824a33-b6a3-4b61-b363-2551d40fda8c",
    "metadata": {},
    "outputs": [],
@@ -153,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 95,
    "id": "6584d486-4b95-4f2c-a270-0fd2c5fc839a",
    "metadata": {},
    "outputs": [],
@@ -166,7 +164,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 96,
+   "id": "d188f632-449d-4c21-848f-09c43cddd753",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FEATURES (eval): ['logret_1d', 'sma_diff']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Konsistenz-Checks: Featureliste vs. Modell ---\n",
+    "# 1) Reihenfolge festnageln (damit Scaler/Modell exakt dieselbe Spaltenreihenfolge sehen)\n",
+    "FEATURES = list(FEATURES)\n",
+    "print(\"FEATURES (eval):\", FEATURES)\n",
+    "\n",
+    "# 2) Model-Input-Dimension prüfen\n",
+    "model_in = getattr(model.input_shape, \"__iter__\", None)\n",
+    "in_dim = model.input_shape[-1] if model_in else model.layers[0].input_shape[-1]\n",
+    "assert in_dim == len(FEATURES), (\n",
+    "    f\"Feature-Mismatch: Model expects {in_dim} features, but FEATURES has {len(FEATURES)}.\\n\"\n",
+    "    \"→ Dies passiert z.B., wenn du Block 2/3 mit einem anderen Feature-Set neu trainiert hast, \"\n",
+    "    \"aber hier noch ein älteres RUN_DIR verwendest.\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "id": "9aebd466-487b-4b3f-b3c5-f3dad3a88c6c",
    "metadata": {},
    "outputs": [],
@@ -199,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 98,
    "id": "c71bb7ef-7955-4b2f-b901-68f04327ec44",
    "metadata": {},
    "outputs": [],
@@ -211,71 +239,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "4aadeb3c-3619-45a2-8a3e-1024a87383e3",
+   "execution_count": null,
+   "id": "bbaa83ef-1c86-4f18-aea8-587cfbdd1721",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['..\\\\results\\\\2025-10-03_00-36-36_lstm\\\\calibrator.joblib']"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# --- Kalibrierung (Isotonic) auf Validation ---\n",
-    "calibrator = IsotonicRegression(out_of_bounds=\"clip\")\n",
-    "calibrator.fit(y_val_proba, yva)     # X = unkalibrierte Probas, y = true labels (Val)\n",
-    "y_val_proba_cal  = calibrator.transform(y_val_proba)\n",
-    "y_test_proba_cal = calibrator.transform(y_test_proba)\n",
-    "joblib.dump(calibrator, RUN_DIR / \"calibrator.joblib\")"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "3160d53a-fae6-4d38-99de-25444855e715",
+   "execution_count": 99,
+   "id": "8f1ac0c3-a5b9-4799-bff4-7eff4450611f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gewählter Threshold (Val, kalibriert): 0.506 | MCC_val=0.098\n"
+      "Kalibrator gewählt: isotonic | Brier(val) iso=0.2440, platt=0.2498\n",
+      "Threshold@ER(val) = 0.500 | E[ret]_val=0.000813\n"
      ]
     }
    ],
    "source": [
-    "# --- Schwellenwahl (Val) mit Pos-Rate-Korridor ---\n",
-    "def choose_threshold(y_true, y_prob, strategy=\"max_mcc\", pos_rate_bounds=(0.2, 0.8)):\n",
-    "    uniq = np.unique(y_prob); cand = np.r_[0.0, uniq, 1.0]\n",
-    "    best_t, best_s = 0.5, -1.0\n",
-    "    for t in cand:\n",
-    "        yp = (y_prob >= t).astype(int)\n",
-    "        pr = float(yp.mean())\n",
-    "        if not (pos_rate_bounds[0] <= pr <= pos_rate_bounds[1]):\n",
-    "            continue\n",
-    "        if strategy == \"max_mcc\":\n",
-    "            s = matthews_corrcoef(y_true, yp)\n",
-    "        else:\n",
-    "            # alternative: 'max_f1' / 'youden_j'\n",
-    "            s = matthews_corrcoef(y_true, yp)\n",
-    "        if s > best_s: best_s, best_t = float(s), float(t)\n",
-    "    if best_s < 0:  # Fallback ohne Bounds\n",
-    "        return 0.5, 0.0\n",
-    "    return best_t, best_s\n",
+    "# === Kalibrierung: Isotonic vs. Platt (Temperature-like) ======================\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from scipy.special import logit, expit\n",
     "\n",
-    "thr, score_val = choose_threshold(yva, y_val_proba_cal, strategy=\"max_mcc\", pos_rate_bounds=(0.2,0.8))\n",
-    "print(f\"Gewählter Threshold (Val, kalibriert): {thr:.3f} | MCC_val={score_val:.3f}\")"
+    "# 1) Isotonic (wie gehabt)\n",
+    "iso = IsotonicRegression(out_of_bounds=\"clip\").fit(y_val_proba, yva)\n",
+    "val_iso  = iso.transform(y_val_proba)\n",
+    "test_iso = iso.transform(y_test_proba)\n",
+    "\n",
+    "# 2) Platt/Temperature-ähnlich: Logistic Regr. auf Logits\n",
+    "#    (entspricht sigmoid(a*logit(p)+b)); stabiler als isotonic bei knapper Datenlage.\n",
+    "logit_val = logit(np.clip(y_val_proba, 1e-6, 1-1e-6))\n",
+    "lr_platt = LogisticRegression(solver=\"lbfgs\")\n",
+    "lr_platt.fit(logit_val.reshape(-1,1), yva)\n",
+    "def platt_transform(p):\n",
+    "    z = logit(np.clip(p, 1e-6, 1-1e-6)).reshape(-1,1)\n",
+    "    return lr_platt.predict_proba(z)[:,1]\n",
+    "\n",
+    "val_platt  = platt_transform(y_val_proba)\n",
+    "test_platt = platt_transform(y_test_proba)\n",
+    "\n",
+    "# Wähle Kalibrator per Val-Brier\n",
+    "brier_iso   = brier_score_loss(yva, val_iso)\n",
+    "brier_platt = brier_score_loss(yva, val_platt)\n",
+    "use_platt = brier_platt <= brier_iso\n",
+    "y_val_cal  = val_platt  if use_platt else val_iso\n",
+    "y_test_cal = test_platt if use_platt else test_iso\n",
+    "calib_name = \"platt\" if use_platt else \"isotonic\"\n",
+    "\n",
+    "joblib.dump({\"type\": calib_name, \"iso\": iso if not use_platt else None,\n",
+    "             \"platt_coef\": (float(lr_platt.coef_[0,0]), float(lr_platt.intercept_[0]))},\n",
+    "            RUN_DIR / \"calibrator.pkl\")\n",
+    "\n",
+    "print(f\"Kalibrator gewählt: {calib_name} | Brier(val) iso={brier_iso:.4f}, platt={brier_platt:.4f}\")\n",
+    "\n",
+    "# === Schwelle via Expected Return auf VAL (mit Pos-Rate-Bounds) ===============\n",
+    "def choose_thr_expected_return(y_true, y_prob, fwd_ret, bounds=(0.2,0.8)):\n",
+    "    uniq = np.unique(y_prob); cand = np.r_[0.0, uniq, 1.0]\n",
+    "    best_t, best_er = 0.5, -1e9\n",
+    "    for t in cand:\n",
+    "        sig = (y_prob >= t).astype(int)\n",
+    "        pr = sig.mean()\n",
+    "        if not (bounds[0] <= pr <= bounds[1]): continue\n",
+    "        er = float((sig * fwd_ret).mean())      # erwartete Rendite\n",
+    "        if er > best_er: best_er, best_t = er, float(t)\n",
+    "    return best_t, best_er\n",
+    "\n",
+    "# fwd-returns an die Fenster-Endindizes der Val/Tests anlegen\n",
+    "close = df[\"close\"].copy()\n",
+    "fwd_val = (np.log(close.shift(-HORIZON)) - np.log(close)).reindex(idx_va)\n",
+    "fwd_tst = (np.log(close.shift(-HORIZON)) - np.log(close)).reindex(idx_te)\n",
+    "\n",
+    "thr, er_val = choose_thr_expected_return(yva, y_val_cal, fwd_val.values, bounds=(0.2,0.8))\n",
+    "print(f\"Threshold@ER(val) = {thr:.3f} | E[ret]_val={er_val:.6f}\")\n",
+    "\n",
+    "# (verhindert jegliche Off-by-…-Fehler)\n",
+    "y_test_from_ds = np.concatenate([y.numpy() for _, y in ds_test], axis=0).astype(int)\n",
+    "\n",
+    "y_test_proba  = model.predict(ds_test, verbose=0).ravel()\n",
+    "# Falls du schon kalibrierst:\n",
+    "y_test_proba_cal = calibrator.transform(y_test_proba)\n",
+    "\n",
+    "# Sicherstellen, dass alles passt\n",
+    "assert len(y_test_from_ds) == len(y_test_proba_cal), (\n",
+    "    f\"len(y_true)={len(y_test_from_ds)} vs len(proba)={len(y_test_proba_cal)}\"\n",
+    ")\n",
+    "\n",
+    "# Threshold anwenden\n",
+    "y_test_pred = (y_test_proba_cal >= thr).astype(int)\n",
+    "\n",
+    "# Jetzt Confusion Matrix etc.\n",
+    "cm  = confusion_matrix(y_test_from_ds, y_test_pred)\n",
+    "rep = classification_report(y_test_from_ds, y_test_pred, digits=3, output_dict=True)\n",
+    "fpr, tpr, _ = roc_curve(yte, y_test_cal); roc_auc = auc(fpr, tpr)\n",
+    "prec, rec, _ = precision_recall_curve(yte, y_test_cal); ap = average_precision_score(yte, y_test_cal)\n",
+    "brier = brier_score_loss(yte, y_test_cal)\n",
+    "bal_acc = balanced_accuracy_score(yte, y_test_pred)\n",
+    "mcc = matthews_corrcoef(yte, y_test_pred)\n",
+    "\n",
+    "# === Decile-Lift & Precision@k ===============================================\n",
+    "def decile_lift(y_true, y_prob, k=10):\n",
+    "    dfp = pd.DataFrame({\"y\":y_true, \"p\":y_prob}).sort_values(\"p\", ascending=False)\n",
+    "    dfp[\"decile\"] = np.ceil((np.arange(len(dfp))+1) / (len(dfp)/k)).astype(int).clip(1,k)\n",
+    "    grp = dfp.groupby(\"decile\")[\"y\"].agg([\"mean\",\"count\"]).rename(columns={\"mean\":\"pos_rate\"})\n",
+    "    lift = grp[\"pos_rate\"] / dfp[\"y\"].mean()\n",
+    "    grp[\"lift\"] = lift\n",
+    "    return grp\n",
+    "\n",
+    "def precision_at_k(y_true, y_prob, ks=(25,50,100)):\n",
+    "    order = np.argsort(-y_prob)\n",
+    "    out = {}\n",
+    "    for k in ks:\n",
+    "        sel = order[:min(k, len(order))]\n",
+    "        out[f\"P@{k}\"] = float(y_true[sel].mean())\n",
+    "    return out\n",
+    "\n",
+    "deciles = decile_lift(yte, y_test_cal, 10)\n",
+    "p_at = precision_at_k(yte, y_test_cal, (25,50,100))\n",
+    "\n",
+    "deciles.to_csv(RUN_DIR / \"decile_lift_test.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 100,
    "id": "df77d65d-26fe-4609-898c-800dee5c857d",
    "metadata": {},
    "outputs": [
@@ -284,9 +374,9 @@
      "output_type": "stream",
      "text": [
       "Confusion matrix (test):\n",
-      " [[176  33]\n",
-      " [213  32]]\n",
-      "MCC: -0.039 BalancedAcc: 0.486 AUROC: 0.477 AUPRC: 0.529\n"
+      " [[ 61 147]\n",
+      " [ 63 181]]\n",
+      "MCC: 0.039 BalancedAcc: 0.518 AUROC: 0.519 AUPRC: 0.55\n"
      ]
     }
    ],
@@ -313,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 101,
    "id": "e1404cda-f83e-43b6-8e8b-e31d868a1ae7",
    "metadata": {},
    "outputs": [
@@ -321,7 +411,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MCC Bootstrap CI [2.5,50,97.5]: [np.float64(-0.094), np.float64(-0.045), np.float64(0.02)]\n"
+      "MCC Bootstrap CI [2.5,50,97.5]: [np.float64(-0.046), np.float64(0.029), np.float64(0.107)]\n"
      ]
     }
    ],
@@ -344,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 102,
    "id": "262a19eb-6fcf-415c-80ae-3eb318ce44dc",
    "metadata": {},
    "outputs": [],
@@ -384,12 +474,20 @@
     "plt.hist(y_test_proba_cal, bins=30)\n",
     "plt.axvline(thr, linestyle=\"--\")\n",
     "plt.title(\"P(y=1) Verteilung (Test, kalibriert)\")\n",
-    "plt.tight_layout(); plt.savefig(FIG_DIR / \"proba_hist_test.png\", dpi=160); plt.close()"
+    "plt.tight_layout(); plt.savefig(FIG_DIR / \"proba_hist_test.png\", dpi=160); plt.close()\n",
+    "\n",
+    "pos_rate_test = float(yte.mean())\n",
+    "plt.figure(figsize=(6,4))\n",
+    "plt.plot(rec, prec, label=f\"AP={ap:.3f}\")\n",
+    "plt.hlines(pos_rate_test, xmin=0, xmax=1, linestyles=\"--\", label=f\"Baseline={pos_rate_test:.3f}\")\n",
+    "plt.xlabel(\"Recall\"); plt.ylabel(\"Precision\"); plt.title(\"Precision-Recall (Test)\")\n",
+    "plt.legend()\n",
+    "plt.tight_layout(); plt.savefig(FIG_DIR / \"pr_test.png\", dpi=160); plt.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 103,
    "id": "08cfd2af-70a6-4187-ab6f-c0ffb4d3c9a7",
    "metadata": {},
    "outputs": [],
@@ -406,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 104,
    "id": "ac31e9e3-bb48-4f08-b07b-01adcb99f752",
    "metadata": {},
    "outputs": [],
@@ -415,12 +513,12 @@
     "close = df[\"close\"].copy()\n",
     "fwd_logret = (np.log(close.shift(-HORIZON)) - np.log(close)).reindex(idx_te)\n",
     "\n",
-    "signals = (preds_test[\"y_proba_cal\"] >= thr).astype(int).reindex(idx_te)\n",
-    "strategy_logret = signals * fwd_logret  # long-only; keine Gebühren/Slippage\n",
+    "# --- Konservative Variante: Entry am Folgetag (T+1) ---\n",
+    "signals_t = (preds_test[\"y_proba_cal\"] >= thr).astype(int).reindex(idx_te)\n",
+    "signals_t1 = signals_t.shift(1).fillna(0)  # erster Tag kein Trade\n",
+    "fwd_logret_t1 = (np.log(close.shift(-HORIZON)) - np.log(close)).reindex(idx_te)\n",
     "\n",
-    "equity = strategy_logret.fillna(0).cumsum().apply(np.exp)  # Startkapital=1\n",
-    "bh_logret = (np.log(close.reindex(idx_te)) - np.log(close.reindex(idx_te).iloc[0])).fillna(0)\n",
-    "bh_equity = np.exp(bh_logret)\n",
+    "equity_t1 = (signals_t1 * fwd_logret_t1).fillna(0).cumsum().apply(np.exp)\n",
     "\n",
     "def _sharpe(logrets, periods_per_year=252):\n",
     "    if len(logrets) < 2: return float(\"nan\")\n",
@@ -448,11 +546,12 @@
     "}\n",
     "\n",
     "plt.figure(figsize=(8,4))\n",
-    "plt.plot(equity.index, equity.values, label=\"Strategy\")\n",
+    "plt.plot(equity.index, equity.values, label=\"Entry@t (optimistisch)\")\n",
+    "plt.plot(equity_t1.index, equity_t1.values, label=\"Entry@t+1 (konservativ)\")\n",
     "plt.plot(bh_equity.index, bh_equity.values, label=\"Buy & Hold\", linestyle=\"--\")\n",
-    "plt.title(f\"Equity Curve (H={HORIZON})\")\n",
+    "plt.title(f\"Equity Curves (H={HORIZON})\")\n",
     "plt.legend(); plt.tight_layout()\n",
-    "plt.savefig(FIG_DIR / \"equity_curves.png\", dpi=160); plt.close()\n",
+    "plt.savefig(FIG_DIR / \"equity_curves_t_vs_t1.png\", dpi=160); plt.close()\n",
     "\n",
     "plt.figure(figsize=(6,4))\n",
     "plt.boxplot([fwd_logret[signals==0].dropna(), fwd_logret[signals==1].dropna()], tick_labels=[\"Signal=0\",\"Signal=1\"])\n",
@@ -462,7 +561,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 105,
+   "id": "e0a1c3dd-3650-4c1e-845e-63c98a6421e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Brier raw=0.2504 → calibrated=0.2484\n",
+      "Precision@k: {'P@25': 0.6, 'P@50': 0.5, 'P@100': 0.5}\n",
+      "Top-Deciles (head):\n",
+      "         pos_rate  count      lift\n",
+      "decile                           \n",
+      "1       0.577778     45  1.070310\n",
+      "2       0.288889     45  0.535155\n",
+      "3       0.622222     45  1.152641\n"
+     ]
+    }
+   ],
+   "source": [
+    "# === Vor/Nach: Histogramm + Brier ============================================\n",
+    "brier_raw = brier_score_loss(yte, y_test_proba)\n",
+    "plt.figure(figsize=(6,4))\n",
+    "plt.hist(y_test_proba, bins=30, alpha=0.6, label=\"raw\")\n",
+    "plt.hist(y_test_cal,  bins=30, alpha=0.6, label=f\"calibrated ({calib_name})\")\n",
+    "plt.axvline(thr, linestyle=\"--\", label=f\"thr={thr:.3f}\")\n",
+    "plt.title(\"P(y=1) – raw vs. calibrated (Test)\")\n",
+    "plt.legend(); plt.tight_layout()\n",
+    "plt.savefig(RUN_DIR / \"figures/proba_hist_raw_vs_cal.png\", dpi=160); plt.close()\n",
+    "\n",
+    "print(f\"Brier raw={brier_raw:.4f} → calibrated={brier:.4f}\")\n",
+    "print(\"Precision@k:\", p_at)\n",
+    "print(\"Top-Deciles (head):\\n\", deciles.head(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
    "id": "200036f8-d7ff-41fe-aa6f-ae6903888710",
    "metadata": {},
    "outputs": [
@@ -473,9 +609,9 @@
       "\n",
       "Block 4 abgeschlossen.\n",
       "Artefakte:\n",
-      " - ..\\results\\2025-10-03_00-36-36_lstm\\preds_test.csv\n",
-      " - ..\\results\\2025-10-03_00-36-36_lstm\\evaluation.json\n",
-      " - ..\\results\\2025-10-03_00-36-36_lstm\\figures\n"
+      " - ..\\results\\2025-10-03_13-48-57_lstm\\preds_test.csv\n",
+      " - ..\\results\\2025-10-03_13-48-57_lstm\\evaluation.json\n",
+      " - ..\\results\\2025-10-03_13-48-57_lstm\\figures\n"
      ]
     }
    ],
@@ -504,6 +640,20 @@
     "        }\n",
     "    },\n",
     "    \"backtest\": backtest,\n",
+    "    \"calibration\": {\n",
+    "    \"method\": \"isotonic\",\n",
+    "    \"path\": str(RUN_DIR / \"calibrator.joblib\"),\n",
+    "    \"brier_raw\": float(brier_raw),\n",
+    "    \"brier_cal\": float(brier_cal)\n",
+    "},\n",
+    "\"diagnostics\": {\n",
+    "    \"val_pos_rate_cal\": float(y_val_proba_cal.mean()),\n",
+    "    \"test_pos_rate_cal\": float(y_test_proba_cal.mean()),\n",
+    "    \"test_pred_pos_rate_at_thr\": float((y_test_proba_cal >= thr).mean()),\n",
+    "},\n",
+    "\"backtest_conservative\": {\n",
+    "    \"final_equity\": float(equity_t1.iloc[-1]),\n",
+    "}\n",
     "}\n",
     "with open(RUN_DIR / \"evaluation.json\", \"w\") as f:\n",
     "    json.dump(out, f, indent=2)\n",
@@ -519,6 +669,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "34c23181-39d6-4d12-b294-a152d62e251b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3852acd-f9d3-495d-b3ff-321f8a6f36c6",
    "metadata": {},
    "outputs": [],
    "source": []
